@@ -669,6 +669,8 @@ address you pass.
 \item[\samp{u\#} (Unicode object) {[Py_UNICODE *, int]}]
 This variant on \samp{u} stores into two C variables, the first one
 a pointer to a Unicode data buffer, the second one its length.
+Non-Unicode objects are handled by interpreting their read buffer
+pointer as pointer to a Py_UNICODE array.
 
 \item[\samp{es} (string, Unicode object or character buffer compatible
 object) {[const char *encoding, char **buffer]}]
